--- a/src/hw-3/chat.css
+++ b/src/hw-3/chat.css
@@ -4,6 +4,16 @@
     box-sizing: border-box;
 }
 
+body {
+    font-size: 14px;
+}
+
+.stars {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
 .chat-wrapper {
     background: #C5DDEB;
     font: 14px/20px "Lato", Arial, sans-serif;
